tests/negative/neg_write_to_constant_index.safe
-- Test: neg_write_to_constant_index
-- Description: Writes through an indexed part rooted in a constant object must be rejected.
-- Expected: REJECT write_to_constant

package Neg_Write_To_Constant_Index is

   type Index is range 1 to 3;
   type Buffer is array (Index) of Integer;

   function Make_Buffer returns Buffer is
      Result : Buffer;
   begin
      for I in Index loop
         Result (I) = Integer (I);
      end loop;
      return Result;
   end Make_Buffer;

   function Run is
      Data : constant Buffer = Make_Buffer;
   begin
      Data (1) = 0;
   end Run;

end Neg_Write_To_Constant_Index;
